...
  isFavorite,
}) => {
  const t = useTheme();

  return (
    <View
      testID="detail-header"
      style={[{ width: "100%", aspectRatio: 1.59 }, a.p_lg]}
    >
      <Image source={image} style={[a.flex_1, a.rounded_lg]} />
      <View
        style={[
          a.flex_row,
...
        <IconButton
          name="left-arrow"
          onPress={onPressBack}
          size={24}
          style={a.p_xs}
          variant="secondary"
          testID="back-button"
        />
        <IconButton
          name={isFavorite ? "hearth-filled" : "hearth"}
          onPress={onPressFavorite}
          size={24}
          style={a.p_xs}
...
