...
}) => {
  const { i18n } = useLingui();
  const t = useTheme();

  return (
    <RectButton
      testID={`restaurant-card`}
      onPress={fnWithId(onCardPress, restaurant.id)}
      style={[
        restaurantCardButtonStyle[variant],
        a.flex_row,
        a.py_sm,
        t.atoms.background.primary,
...
      horizontal={horizontal}
      renderItem={renderItem}
      showsHorizontalScrollIndicator={false}
      snapToAlignment="start"
      snapToInterval={HORIZONTAL_CARD_WIDTH + HORIZONTAL_CARD_SPACING}
      style={[style]}
      testID="restaurants-list"
      refreshing={refreshing}
      onRefresh={onRefresh}
      onEndReached={onEndReached}
      ListEmptyComponent={renderEmptyComponent}
    />
  );
...
